# c.chiow-CSD2101-A1-CI-CD

./: .gitignore  README.md  index.html  script.js  styles.css
.github/workflows/: desktop.yml  hello.yml  pages.yml
Assignment1/: CMakeLists.txt  README.md  build_web.bat  build_web.sh  csd2101.bat
Assignment1/Scene/: Model.h  Renderer.cpp  Renderer.h  ShaderHelper.h  Square.cpp  Square.h  Triangle.cpp  Triangle.h  main.cpp
Assignment1/android/: local.properties
Assignment1/android/app/src/main/assets/shader/: SquareFragment.glsl  SquareVertex.glsl
Assignment1/android/app/src/main/cpp/: CMakeLists.txt  NativeTemplate.cpp
Assignment1/build_desktop/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  GLPIFrameworkIntro.sln  GLPIFrameworkIntro.vcxproj  GLPIFrameworkIntro.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
Assignment1/build_desktop/GLPIFrameworkIntro.dir/Debug/: GLPIFrameworkIntro.exe.recipe  GLPIFrameworkIntro.ilk
Assignment1/build_desktop/GLPIFrameworkIntro.dir/Debug/GLPIFram.E30FDC87.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Assignment1/build_desktop/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
Assignment1/build_desktop/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog
Assignment1/build_desktop/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
Assignment1/cmake/: BuildTests.cmake  Utilities.cmake
Assignment1/lib/tinyobjloader/: CMakeLists.txt
Assignment1/lib/tinyobjloader/fuzzer/: fuzz_tobj_c.c
Assignment1/lib/tinyobjloader/tests/: Makefile  tess_tester.c  tester_c.c  tester_c_freestanding.c
Assignment1/projects/: CMakeLists.txt
Assignment1/projects/assignment-1/include/: glhelper.h  glpbo.h
Assignment1/projects/assignment-1/src/: glhelper.cpp  glpbo.cpp  main-pbo.cpp
Assignment1/sample+a1/sample+a1/sample/: readme.txt
Assignment1/web/: index.data  index.js  index.wasm
